--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
 
         <form>
 
-            <label for="prenom">PRENOM</label>
+            <label for="prenom">Prénom</label>
             <input type="text" id="prenom">
 
-            <label for="nom">NOM</label>
+            <label for="nom">Nom</label>
             <input type="text" id="nom">
 
-            <label for="txt-area">MESSAGE</label>
+            <label for="txt-area">Message</label>
             <textarea  id="txt-area"></textarea>
 
             <button class="form-btn" type="submit">Envoyer</button>
