cross navbar background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="menuToggle" onclick="toggleMenu();"></div>
             <ul class="navigation">
                 <li><a href="" class="items-navigation">Accueil</a></li>
-                <li><a href="#equipement" class="items-navigation">Matériel</a></li>
+                <li><a href="#equipement" class="items-navigation">Équipements</a></li>
                 <li><a href="#tarifs" class="items-navigation">Tarifs</a></li>
                 <li><a href="#contact" class="items-navigation">Contact</a></li>
                 <li><a href="" class="items-navigation inscription">Inscription</a></li>
